--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.pl</groupId>
+	<groupId>io.github.pl9656300998-ship-it</groupId>
 	<artifactId>pl-spring-security</artifactId>
 	<version>0.4</version>
 	<name>pl-spring-security</name>
