--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.4</version>
 	<name>pl-spring-security</name>
 	<description>Spring Security Oauth Library</description>
-	<url/>
+	<url>https://github.com/pl9656300998-ship-it/0ztxo1gbza</url>
 	<licenses>
     	<license>
       		<name>Apache License 2.0</name>
@@ -28,9 +28,9 @@
     </developer>
   </developers>
 	<scm>
-    <connection>scm:git:git://https://github.com/pl9656300998-ship-it/pl-spring-security-oauth.git</connection>
-    <developerConnection>scm:git:ssh://https://github.com/pl9656300998-ship-it/pl-spring-security-oauth.git</developerConnection>
-    <url>https://https://github.com/pl9656300998-ship-it/pl-spring-security-oauth</url>
+    <connection>scm:git:git://https://github.com/pl9656300998-ship-it/0ztxo1gbza.git</connection>
+    <developerConnection>scm:git:ssh://https://github.com/pl9656300998-ship-it/0ztxo1gbza.git</developerConnection>
+    <url>https://https://github.com/pl9656300998-ship-it/0ztxo1gbza</url>
   </scm>
 	<properties>
 		<java.version>17</java.version>
@@ -142,7 +142,7 @@
   <distributionManagement>
   <repository>
     <id>github</id>
-    <url>https://maven.pkg.github.com/pl9656300998-ship-it/pl-spring-security-oauth</url>
+    <url>https://maven.pkg.github.com/pl9656300998-ship-it/0ztxo1gbza</url>
   </repository>
 </distributionManagement>
 
